can now print numbers on screen

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 
   <body>
     <h1>Hello and welcome</h1>
+    <h2>Choose wich multiplication table to practice</h2>
+    <div class="choose-multiplication-table">
+
+    </div>
   </body>
 
   <script src="script.js"></script>
