fixed hint button

--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/fonts.css">
     <title></title>
   </head>
 
   <body>
     <h1>Hello and welcome</h1>
     <h2>Choose wich multiplication table to practice</h2>
+    <div class="hint">
+      <button>
+        <h3>Need a hint?</h3>
+      </button>
+      <p class="hidden">hello</p>
+    </div>
     <div class="choose-multiplication-table">
 
     </div>
