updated the index file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <body>
     <h1>Hello and welcome</h1>
     <h2>Choose wich multiplication table to practice</h2>
-    <div class="hint">
+    <h3 class="hidden"></h3>
+    <div class="hint hidden">
       <button>
         <h3>Need a hint?</h3>
       </button>
