fixed hidden class issue

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/fonts.css">
     <title></title>
@@ -14,15 +14,24 @@
   <body>
     <h1>Hello and welcome</h1>
     <h2>Choose wich multiplication table to practice</h2>
-    <h3 class="hidden"></h3>
+
     <div class="hint hidden">
       <button>
-        <h3>Need a hint?</h3>
+        <h4>Need a hint?</h4>
       </button>
       <p class="hidden">hello</p>
     </div>
+
     <div class="choose-multiplication-table">
 
+    </div>
+
+    <h3 class="hidden">Hello</h3>
+
+    <div class="choice-buttons hidden">
+      <button class="answer">1</button>
+      <button class="answer">X</button>
+      <button class="answer">2</button>
     </div>
   </body>
 
