fixed a back button

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
       <button class="answer">X</button>
       <button class="answer">2</button>
     </div>
+
+    <div class="back-to-start hidden">
+      <a href="index.html" type="button">Back to start</a>
+    </div>
   </body>
 
   <script src="script.js"></script>
