back were i started

--- a/index.html
+++ b/index.html
@@ -23,34 +23,34 @@
     </div>
 
     <div class="choose-multiplication-table">
-      <button class="multiplication-table" data-table="1" onclick="tableClick(1)">
+      <button class="multiplication-table" onclick="tableClick(1)">
         <p>1</p>
       </button>
-      <button class="multiplication-table" data-table="2" onclick="tableClick(2)">
+      <button class="multiplication-table" onclick="tableClick(2)">
         <p>2</p>
       </button>
-      <button class="multiplication-table" data-table="3" onclick="tableClick(3)">
+      <button class="multiplication-table" onclick="tableClick(3)">
         <p>3</p>
       </button>
-      <button class="multiplication-table" data-table="4" onclick="tableClick(4)">
+      <button class="multiplication-table" onclick="tableClick(4)">
         <p>4</p>
       </button>
-      <button class="multiplication-table" data-table="5" onclick="tableClick(5)">
+      <button class="multiplication-table" onclick="tableClick(5)">
         <p>5</p>
       </button>
-      <button class="multiplication-table" data-table="6" onclick="tableClick(6)">
+      <button class="multiplication-table" onclick="tableClick(6)">
         <p>6</p>
       </button>
-      <button class="multiplication-table" data-table="7" onclick="tableClick(7)">
+      <button class="multiplication-table" onclick="tableClick(7)">
         <p>7</p>
       </button>
-      <button class="multiplication-table" data-table="8" onclick="tableClick(8)">
+      <button class="multiplication-table" onclick="tableClick(8)">
         <p>8</p>
       </button>
-      <button class="multiplication-table" data-table="9" onclick="tableClick(9)">
+      <button class="multiplication-table" onclick="tableClick(9)">
         <p>9</p>
       </button>
-      <button class="multiplication-table" data-table="10" onclick="tableClick(10)">
+      <button class="multiplication-table" onclick="tableClick(10)">
         <p>10</p>
       </button>
     </div>
@@ -58,9 +58,9 @@
     <h3 class="hidden">Hello</h3>
 
     <div class="choice-buttons hidden">
-      <button class="answer">1</button>
-      <button class="answer">X</button>
-      <button class="answer">2</button>
+      <button class="answer" id="1">1</button>
+      <button class="answer" id="x">X</button>
+      <button class="answer" id="2">2</button>
     </div>
 
     <div class="back-to-start hidden">
