--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     </div>
 
     <h3 class="hidden">Hello</h3>
+    <h5>Hello</h5>
 
     <div class="choice-buttons hidden">
       <button class="answer" id="1">1</button>
