added colors and changed name of font

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/typography.css">
     <title></title>
   </head>
 
