--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <h1>Hello and welcome</h1>
+    <h1>Useless Math Practice</h1>
     <h2>Choose wich multiplication table to practice</h2>
 
     <div class="hint hidden">
