--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/typography.css">
-    <title></title>
+    <title>Useless Math</title>
   </head>
 
   <body>
